--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "react-scripts": "5.0.1",
     "react-simple-code-editor": "^0.13.1",
     "styled-components": "^6.0.8",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "preview-build": "serve -s build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "lint": "eslint ./ --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint ./ --ext .js,.jsx,.ts,.tsx --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +48,16 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
-    "@types/prismjs": "^1.26.0"
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/prismjs": "^1.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.3",
+    "typescript": "^4.9.2"
   }
 }
