--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,19 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
+  "parser": "@typescript-eslint/parser",
   "extends": [
-    "standard-with-typescript",
-    "plugin:react/recommended",
-    "eslint:recommended",
-    "prettier"
+    "react-app",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
   ],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
+  "plugins": ["react", "@typescript-eslint", "prettier"],
+  "rules": {
+    "prettier/prettier": "error",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-unused-vars": "warn"
   },
-  "plugins": ["react"],
-  "rules": {}
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
